# ducklake_exploration

./: .gitignore  README.md  pyproject.toml  run_all.sh
benchmarks/: config.py  data_gen.py  runner.py
benchmarks/formats/: base.py  delta.py  ducklake.py  iceberg.py
benchmarks/queries/: __init__.py  aggregations.py  reads.py  schema_evolution.py  updates.py
dashboard/: app.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: source_table.sql
dbt_project/models/marts/: customer_ltv.sql  incremental_daily_revenue.sql  product_performance.sql  revenue_by_region.sql
dbt_project/models/staging/: stg_customers.sql  stg_orders.sql  stg_products.sql
results/: benchmark_results.csv  dbt_benchmark_results.csv
scripts/: 01_generate_data.py  02_setup_formats.py  03_run_benchmarks.py  04_run_dbt_benchmarks.py
