[project]
name = "ducklake-benchmark"
version = "0.1.0"
description = "Performance comparison: DuckLake vs Delta Lake vs Apache Iceberg"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.0",
    "deltalake>=0.24.0",
    "pyiceberg[duckdb,sql-sqlite]>=0.8.0",
    "pyarrow>=17.0.0",
    "pandas>=2.0.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "dbt-duckdb>=1.9.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "sqlglot>=25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmarks"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.0.0",
    "ipykernel>=6.0.0",
]
